# soundbooth

./: .earthlyignore  .gitignore  CHANGELOG.md  Earthfile  README.md  cabal-common.project  cabal-scaffold.yaml  cabal-wasm.project  cabal-wasm.project.freeze  cabal.project  cabal.project.freeze  soundbooth.cabal
app/: Main.hs
data/: index.html  index.js
soundbooth-core/: CHANGELOG.md  README.md  soundbooth-core.cabal
soundbooth-core/src/Soundbooth/Common/: Types.hs
soundbooth-frontend/: CHANGELOG.md  README.md  soundbooth-frontend.cabal
soundbooth-frontend/app/: Main.hs
soundbooth-frontend/data/: index.html
soundbooth-frontend/src/Soundbooth/: Frontend.hs
soundbooth-server/: CHANGELOG.md  README.md  soundbooth-server.cabal
soundbooth-server/app/: Main.hs  repl.hs  server.hs
soundbooth-server/src/Effectful/: Audio.hs  WebSockets.hs
soundbooth-server/src/Effectful/Concurrent/: SinkSource.hs
soundbooth-server/src/Soundbooth/: Server.hs
soundbooth-server/src/Soundbooth/Server/: Cueing.hs  Orphans.hs  Player.hs  Types.hs
soundbooth-server/src/Soundbooth/Server/App/: REPL.hs  Server.hs
src/Audio/Cue/: Server.hs
