cabal-version: 3.0
name: soundbooth
version: 0.1.0.0
description: Please see the README on GitHub at <https://github.com/konn/soundbooth#readme>
homepage: https://github.com/konn/soundbooth#readme
bug-reports: https://github.com/konn/soundbooth/issues
author: Hiromi ISHII
maintainer: konn.jinro_at_gmail.com
copyright: 2024 (c) Hiromi ISHII
license: BSD-3-Clause
license-file: LICENSE
build-type: Simple
extra-doc-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: https://github.com/konn/soundbooth

common defaults
  build-depends: base >=4.7 && <5
  default-language: GHC2021
  default-extensions:
    BlockArguments
    LambdaCase
    OverloadedLabels
    OverloadedRecordDot

  autogen-modules: Paths_soundbooth
  other-modules: Paths_soundbooth
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages

library
  import: defaults
  hs-source-dirs: src
  -- cabal-gild: discover src
  exposed-modules:
    Audio.Cue.Server

  build-depends:
    aeson,
    bytestring,
    containers,
    deepseq,
    deferred-folds,
    effectful,
    focus,
    foldl,
    generic-lens,
    hashable,
    lens,
    optparse-applicative,
    proteaaudio,
    safe-exceptions,
    stm,
    stm-containers,
    streaming,
    streaming-bytestring,
    text,
    unliftio,
    unordered-containers,
    vector,
    websockets,
    yaml,

executable soundbooth
  import: defaults
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends: soundbooth

test-suite soundbooth-test
  import: defaults
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends: soundbooth
