cabal-version: 3.0
name: soundbooth-core
version: 0.1.0.0
description: Please see the README on GitHub at <https://github.com/konn/soundbooth/soundbooth-core#readme>
homepage: https://github.com/konn/soundbooth#readme
bug-reports: https://github.com/konn/soundbooth/issues
author: Hiromi ISHII
maintainer: konn.jinro_at_gmail.com
copyright: (c) Hiromi ISHII 2024- present
license: BSD-3-Clause
license-file: LICENSE
build-type: Simple
tested-with:
  ghc ==9.8.2 || ==9.10.0.20240412

extra-doc-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: https://github.com/konn/soundbooth
  subdir: soundbooth-core

common defaults
  autogen-modules: Paths_soundbooth_core
  other-modules: Paths_soundbooth_core
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages

  default-language: GHC2021
  default-extensions:
    BlockArguments
    LambdaCase
    OverloadedLabels
    OverloadedRecordDot

  build-depends: base >=4.7 && <5

library
  import: defaults
  build-depends:
    aeson,
    bytestring,
    cereal,
    containers,
    deepseq,
    hashable,
    text,
    vector,

  -- cabal-gild: discover src
  exposed-modules:
    Soundbooth.Common.Types

  hs-source-dirs: src

executable soundbooth-core-exe
  import: defaults
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends: soundbooth-core

test-suite soundbooth-core-test
  import: defaults
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs: test
  ghc-options:
    -threaded
    -O2
    -rtsopts
    -with-rtsopts=-N

  build-depends: soundbooth-core
