cabal-version: 3.0
name: soundbooth-frontend
version: 0.1.0.0
description: Please see the README on GitHub at <https://github.com/konn/soundbooth/soundbooth-frontend#readme>
homepage: https://github.com/konn/soundbooth#readme
bug-reports: https://github.com/konn/soundbooth/issues
author:
maintainer:
copyright: (c)  2024- present
license: BSD-3-Clause
license-file: LICENSE
build-type: Simple
tested-with:
  ghc ==9.8.2 || ==9.10.0.20210412

extra-doc-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: https://github.com/konn/soundbooth
  subdir: soundbooth-frontend

common defaults
  autogen-modules: Paths_soundbooth_frontend
  other-modules: Paths_soundbooth_frontend
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages

  default-language: Haskell2010
  build-depends: base >=4.7 && <5

  if !os(wasi)
    ghc-options:
      -fplugin
      GHC.Wasm.FFI.Plugin

library
  import: defaults
  build-depends:
    ghc-wasm-compat,
    microaeson,
    soundbooth-core,

  -- cabal-gild: discover src
  exposed-modules: Lib
  hs-source-dirs: src

executable soundbooth-frontend
  import: defaults
  main-is: Main.hs
  hs-source-dirs: app
  build-depends: soundbooth-frontend
  ghc-options: -O2

  if os(wasi)
    ghc-options:
      -no-hs-main
      -optl-mexec-model=reactor
      "-optl-Wl,--export=hs_start"
