cabal-version: 3.0
name: soundbooth-server
version: 0.1.0.0
description: Please see the README on GitHub at <https://github.com/konn/soundbooth/soundbooth-server#readme>
homepage: https://github.com/konn/soundbooth#readme
bug-reports: https://github.com/konn/soundbooth/issues
author:
maintainer:
copyright: (c)  2024- present
license: BSD-3-Clause
license-file: LICENSE
build-type: Simple
tested-with: ghc ==9.8.2
extra-doc-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: https://github.com/konn/soundbooth
  subdir: soundbooth-server

common defaults
  build-depends: base >=4.7 && <5
  default-language: GHC2021
  default-extensions:
    BlockArguments
    LambdaCase
    OverloadedLabels
    OverloadedRecordDot

  autogen-modules: Paths_soundbooth_server
  other-modules: Paths_soundbooth_server
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages

library
  import: defaults
  build-depends: soundbooth-core
  hs-source-dirs: src
  -- cabal-gild: discover src
  exposed-modules:
    Effectful.Audio
    Effectful.WebSockets
    Soundbooth.Server.App.REPL
    Soundbooth.Server.App.Server
    Soundbooth.Server.Cueing
    Soundbooth.Server.Orphans
    Soundbooth.Server.Player
    Soundbooth.Server.Types

  build-depends:
    aeson,
    bytestring,
    cereal,
    containers,
    deepseq,
    deferred-folds,
    effectful,
    effectful-core,
    effectful-lens,
    effectful-plugin,
    focus,
    foldl,
    generic-lens,
    hashable,
    lens,
    log-base,
    log-effectful,
    log-effectful-extra,
    monad-loops,
    mtl,
    optparse-applicative,
    ordered-containers,
    proteaaudio,
    random-effectful,
    safe-exceptions,
    servant,
    servant-effectful,
    servant-server,
    servant-websockets,
    stm,
    stm-chans,
    stm-containers,
    streaming,
    streaming-bytestring,
    text,
    unliftio,
    unordered-containers,
    vector,
    wai,
    wai-app-static,
    warp,
    websockets,
    yaml,
    zippers,

executable soundbooth-repl
  import: defaults
  main-is: repl.hs
  hs-source-dirs: app
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends: soundbooth-server

executable soundbooth
  import: defaults
  main-is: server.hs
  hs-source-dirs: app
  ghc-options:
    -threaded
    -rtsopts
    "-with-rtsopts=-N --nonmoving-gc"

  build-depends: soundbooth-server

test-suite soundbooth-server-test
  import: defaults
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends: soundbooth-server
